PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Add universal search functionality from web interface

Phoronix Test Suite 5.6 Milestone 5
11 March 2015

- pts-core: Ignore test run locking in stress/multi-run mode
- pts-core: Allow 128 character result identifier strings
- pts-core: Switch the dump-documentation sub-command to generating the README in md format
- phoromatic: Change the custom From email sender to Reply-To
- phoromatic: Finish hooking-up multi-test/stress-run functionality via the benchmark page
- phoromatic: Send emails from rootadmin or group admin's email address where applicable rather than no-reply@
- phoromatic: Scroll bar on local suites page condensing
- phoromatic: Add "End Ticket" option to benchmark page
- phoromatic: Allow stress tests up to 90 days
- phoromatic: Allow stress runs up to 24 concurrent tests
- phoromatic: Add basic support for annotating/commenting on result files and individual graphs
- phoromatic: Add support for the user to delete annotations

Phoronix Test Suite 5.6 Milestone 4
25 February 2015

- pts-core: Improvements to phoronix-test-suite make-download-cache
- phoromatic: Add "admin data" page to let the rootadmin permanently delete schedules/results/systems
- phoromatic: Allow for system identifier variable in benchmark tickets of .SYSTEM
- phoromatic: Allow for system identifier variable in benchmark tickets of .GROUP
- phoromatic: Allow tickets to be removed from the individual benchmark page
- phoromatic: Allow creating new group accounts from the rootadmin page
- phoromatic: Add support for repeating tickets
- phoromatic: Add basic support for system variables

Phoronix Test Suite 5.6 Milestone 3
15 February 2015

- phoromatic: Allow triggers to be deleted
- phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
- phoromatic: Add result RSS support
- phoromatic: Add new option to results page