@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 - phoromatic: Add universal search functionality from web interface
+- phoromatic: Improve formatting of annotations
 
 Phoronix Test Suite 5.6 Milestone 5
 11 March 2015
